--- a/leafletgeocoding.html
+++ b/leafletgeocoding.html
@@ -27,7 +27,7 @@ function showMap(err, data) {
     // point, like an address. Here we handle both cases,
     // by fitting the map bounds to an area of zooming to a point.
     if (data.lbounds) {
-        map.fitBounds(data.lbounds);
+        map.fitBounds(data.lbounds);i
     } else if (data.latlng) {
         map.setView([data.latlng[0], data.latlng[1]], 13);
     }
