--- a/donnie.html
+++ b/donnie.html
@@ -48,7 +48,7 @@ var geoJson = [{
     "geometry": { "type": "Point", "coordinates": [41, -81]},
     "properties": {
         'title': 'Washington, D.C.',
-        'marker-color': '#3c4e5a',
+        'marker-color': '#FFB008',
         'marker-symbol': 'monument',
         'marker-size': 'large',
 
